--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ default:
 deploy_preview:
   stage: deploy
   except:
-    - main
+    - master
   script:
     - npm install --global vercel
     - vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
@@ -14,7 +14,7 @@ deploy_preview:
 deploy_production:
   stage: deploy
   only:
-    - main
+    - master
   script:
     - npm install --global vercel
     - vercel pull --yes --environment=production --token=$VERCEL_TOKEN
