--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,15 @@
 default:
-  image: node:16.16.0
+  image: python:3.9
 
 deploy_preview:
   stage: deploy
   except:
     - master
   script:
+    - python -m venv venv
+    - source venv/bin/activate
+    - python -m pip install --upgrade pip
+    - pip install --disable-pip-version-check --target . werkzeug==1.0.1
     - npm install --global vercel
     - vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
     - vercel build --token=$VERCEL_TOKEN
@@ -16,6 +20,10 @@ deploy_production:
   only:
     - master
   script:
+    - python -m venv venv
+    - source venv/bin/activate
+    - python -m pip install --upgrade pip
+    - pip install --disable-pip-version-check --target . werkzeug==1.0.1
     - npm install --global vercel
     - vercel pull --yes --environment=production --token=$VERCEL_TOKEN
     - vercel build --prod --token=$VERCEL_TOKEN
