--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,43 @@
 asgiref==3.7.2
 astroid==2.7.3
 autopep8==1.5.7
+beautifulsoup4==4.11.1
+boto3==1.26.21
+botocore==1.29.22
 certifi==2021.5.30
 chardet==4.0.0
+charset-normalizer==2.1.1
 coverage==5.5
 dj-database-url==0.5.0
 Django==4.2.5
+django-cors-headers==3.13.0
+django-crispy-forms==1.14.0
 django-environ==0.7.0
+django-livereload-server==0.4
+django-storages==1.13.1
+django-widget-tweaks==1.4.12
+djangorestframework==3.14.0
 gunicorn==20.1.0
 idna==3.2
 isort==5.9.3
+jmespath==1.0.1
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
+Pillow==9.3.0
 psycopg2-binary==2.9.1
 pycodestyle==2.7.0
+python-dateutil==2.8.2
 pytz==2021.1
+requests==2.28.1
+s3transfer==0.6.0
 six==1.16.0
+soupsieve==2.3.2.post1
 sqlparse==0.4.4
 toml==0.10.2
+tomli==2.0.1
+tornado==6.2
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==1.26.6
 whitenoise==5.3.0
 wrapt==1.12.1
-Pillow
-django-cors-headers>=3.10
