--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,23 +2,18 @@ default:
   image: node:16.16.0
 
 stages:
-  - install
   - deploy
 
-install:
-  stage: install
-  image: python:3.9
-  script:
-    - python -m venv venv
-    - source venv/bin/activate
-    - python -m pip install --upgrade pip
-    - pip install --disable-pip-version-check --target . werkzeug==1.0.1
+variables:
+  PYTHON_VERSION: "3.9"
 
 deploy_preview:
   stage: deploy
   except:
     - master
   script:
+    - apt-get update -qy
+    - apt-get install -y python$PYTHON_VERSION python3-pip
     - npm install --global vercel
     - vercel pull --yes --environment=preview --token=$VERCEL_TOKEN
     - vercel build --token=$VERCEL_TOKEN
@@ -29,6 +24,8 @@ deploy_production:
   only:
     - master
   script:
+    - apt-get update -qy
+    - apt-get install -y python$PYTHON_VERSION python3-pip
     - npm install --global vercel
     - vercel pull --yes --environment=production --token=$VERCEL_TOKEN
     - vercel build --prod --token=$VERCEL_TOKEN
