--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-livereload-server==0.4
 django-storages==1.13.1
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
+ez-setup==0.9
 gunicorn==20.1.0
 idna==3.2
 isort==5.9.3
@@ -24,7 +25,7 @@ jmespath==1.0.1
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 Pillow==9.3.0
-psycopg2-binary==2.9.1
+psycopg2-binary==2.9.7
 pycodestyle==2.7.0
 python-dateutil==2.8.2
 pytz==2021.1
