--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+annotated-types==0.5.0
+anyio==4.0.0
 asgiref==3.7.2
 astroid==2.7.3
 autopep8==1.5.7
@@ -8,6 +10,7 @@ certifi==2021.5.30
 chardet==4.0.0
 charset-normalizer==2.1.1
 coverage==5.5
+deprecation==2.1.0
 dj-database-url==0.5.0
 Django==4.2.5
 django-cors-headers==3.13.0
@@ -18,27 +21,42 @@ django-storages==1.13.1
 django-widget-tweaks==1.4.12
 djangorestframework==3.14.0
 ez-setup==0.9
+gotrue==1.1.0
 gunicorn==20.1.0
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
 idna==3.2
 isort==5.9.3
 jmespath==1.0.1
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
+packaging==23.1
 Pillow==9.3.0
+postgrest==0.10.8
 psycopg2-binary==2.9.7
 pycodestyle==2.7.0
+pydantic==2.3.0
+pydantic_core==2.6.3
 python-dateutil==2.8.2
 pytz==2021.1
+realtime==1.0.0
 requests==2.28.1
 s3transfer==0.6.0
 six==1.16.0
+sniffio==1.3.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.4
+storage3==0.5.4
+StrEnum==0.4.15
+supabase==1.0.4
+supafunc==0.2.3
 toml==0.10.2
 tomli==2.0.1
 tornado==6.2
 typing_extensions==4.7.1
 tzdata==2023.3
 urllib3==1.26.6
+websockets==10.4
 whitenoise==5.3.0
 wrapt==1.12.1
