--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,9 +1,34 @@
-default:
-  image: nikolaik/python-nodejs:python3.9-nodejs16
+stages:
+  - test
+  - deploy
 
-# For Staging
-deploy_preview:
+staging:test:
+  stage: test
+  image: python:3.9
+  only: staging
+  script:
+  - python -m venv venv
+  - source venv/bin/activate
+  - pip install -r requirements.txt
+  - python manage.py collectstatic --noinput
+  - python manage.py migrate
+  - python manage.py test
+
+production:test:
+  stage: test
+  image: python:3.9
+  only: master
+  script:
+  - python -m venv venv
+  - source venv/bin/activate
+  - pip install -r requirements.txt
+  - python manage.py collectstatic --noinput
+  - python manage.py migrate
+  - python manage.py test
+
+staging:deploy:
   stage: deploy
+  image: nikolaik/python-nodejs:python3.9-nodejs16
   only:
     - staging
   script:
@@ -12,9 +37,9 @@ deploy_preview:
     - vercel build --token=$VERCEL_TOKEN
     - vercel deploy --prebuilt  --token=$VERCEL_TOKEN
 
-# For Production
-deploy_production:
+production:deploy:
   stage: deploy
+  image: nikolaik/python-nodejs:python3.9-nodejs16
   only:
     - master
   script:
