--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -73,7 +73,7 @@ jobs:
   Deploy:
     runs-on: ubuntu-latest
     needs: test
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: Install Vercel CLI
