--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
       {
-        "src": "testdjangodeploy/wsgi.py",
+        "src": "testdjangovercel/wsgi.py",
         "use": "@vercel/python",
         "config": {
           "maxLambdaSize": "15mb",
@@ -12,7 +12,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "testdjangodeploy/wsgi.py"
+        "dest": "testdjangovercel/wsgi.py"
       }
     ]
   }
