--- a/vercel.json
+++ b/vercel.json
@@ -2,10 +2,10 @@
     "builds": [
     {
         "src": "testdjangovercel/wsgi.py",
-        "use": "@vercel/python",
+        "use": "@ardnt/vercel-python-wsgi",
         "config": {
-        "maxLambdaSize": "15mb",
-        "runtime": "python3.9"
+            "maxLambdaSize": "15mb",
+            "runtime": "python3.9"
         }
     }
     ],
